k8s/category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: category-service
  template:
    metadata:
      labels:
        component: category-service
    spec:
      containers:
        - name: category-service
          image: faustaleonardo/medanstore-category-service
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: category-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: category-service
  ports:
    - port: 5002
      targetPort: 5002
