k8s/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: email-service
  template:
    metadata:
      labels:
        component: email-service
    spec:
      containers:
        - name: email-service
          image: faustaleonardo/medanstore-email-service
          ports:
            - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: email-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: email-service
  ports:
    - port: 5007
      targetPort: 5007
