k8s/item-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: item-service
  template:
    metadata:
      labels:
        component: item-service
    spec:
      containers:
        - name: item-service
          image: faustaleonardo/medanstore-item-service
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: item-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: item-service
  ports:
    - port: 5003
      targetPort: 5003
