k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-service
  template:
    metadata:
      labels:
        component: order-service
    spec:
      containers:
        - name: order-service
          image: faustaleonardo/medanstore-order-service
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: order-service
  ports:
    - port: 5005
      targetPort: 5005
