k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-service
  template:
    metadata:
      labels:
        component: payment-service
    spec:
      containers:
        - name: payment-service
          image: faustaleonardo/medanstore-payment-service
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: payment-service
  ports:
    - port: 5006
      targetPort: 5006
