k8s/picture-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picture-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: picture-service
  template:
    metadata:
      labels:
        component: picture-service
    spec:
      containers:
        - name: picture-service
          image: faustaleonardo/medanstore-picture-service
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: picture-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: picture-service
  ports:
    - port: 5004
      targetPort: 5004
