k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user-service
  template:
    metadata:
      labels:
        component: user-service
    spec:
      containers:
        - name: user-service
          image: faustaleonardo/medanstore-user-service
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user-service
  ports:
    - port: 5001
      targetPort: 5001
