k8s/voucher-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voucher-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: voucher-service
  template:
    metadata:
      labels:
        component: voucher-service
    spec:
      containers:
        - name: voucher-service
          image: faustaleonardo/medanstore-voucher-service
          ports:
            - containerPort: 5009
---
apiVersion: v1
kind: Service
metadata:
  name: voucher-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: voucher-service
  ports:
    - port: 5009
      targetPort: 5009
